--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1869,4 +1869,11 @@ linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
     마지막으로 저자는 Pólya, Hamming, Rich Hickey 등도 같은 메시지를 반복해왔음을 언급하며, 핵심은 단순하다:
 
     “생각하라. 그리고 진짜 문제를 이해하라.”
+ 
+## 25.04.23
 
+[What′s new in C 13 overview  rdotnet](https://www.reddit.com/r/dotnet/comments/1g9ighp/whats_new_in_c_13_overview/)
+
+- 올해 업데이트는 좀 심심함.
+- partial property 지원은 긍정적
+- .NET 10 LTS 는 큰게 올 것 같다. 기다리자.
