--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1877,3 +1877,10 @@ linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
 - 올해 업데이트는 좀 심심함.
 - partial property 지원은 긍정적
 - .NET 10 LTS 는 큰게 올 것 같다. 기다리자.
+
+## 25.04.25
+
+[Unity - Manual Prebuilt shaders](https://docs.unity3d.com/6000.0/Documentation/Manual/shader-built-in-landing.html)
+
+- 프리 빌드한 Shader 정보는 만약 애플리케이션 이름이 변경되면 경로를 못 찾게 될 수도 있다지...
+- 이 경우 런타임에 Shader 온타임 빌드가 되어서 프레임 드랍이 발생한다. shader warm-up 절차를 처음부터 다시 해야하는 셈.
