--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -1813,6 +1813,17 @@ linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
 - ClassLibrary/ `Folder / Foo.cs`
   - 디렉토리와 파일을 동시에 생성 가능
 
+## 25.04.20
+
+[아이라섭 월챗인지 뭔진 모르겠는데 엍탱이없네 ㅋㅋ - 마비노기 모바일 채널](https://arca.live/b/mabimobile/134230337)
+
+![image_2025-04-20-21-18-00](img/image_2025-04-20-21-18-00.png)
+
+json 텍스트에 string escape 적용이 안되어서 json 포맷 오류 + 필터링 실패해도 일단 채팅 메세지는 보여준다는 정책 때문에 욕설이 그대로 노출 된 이슈
+
+- 3월에 일찍 발견해서 고쳐놨지만 당시에 욕설 악용하는 부분까지 예측을 못해서, 핫픽스로 태우지 않았음.
+- 4월 24일 업데이트 마일스톤에 태웠었는데, 업데이트 일주일을 앞두고 취약점 발견한 유저들이 악용.
+
 ## 25.04.21
 
 [Cursor에 €400를 날려본 경험에서 얻은 교훈  GeekNews](https://news.hada.io/topic?id=20358)
@@ -1884,3 +1895,4 @@ linux 시스템의 비동기 IO (리눅스 커널의 시스템 콜)
 
 - 프리 빌드한 Shader 정보는 만약 애플리케이션 이름이 변경되면 경로를 못 찾게 될 수도 있다지...
 - 이 경우 런타임에 Shader 온타임 빌드가 되어서 프레임 드랍이 발생한다. shader warm-up 절차를 처음부터 다시 해야하는 셈.
+
