--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2004,3 +2004,21 @@ If an engineer wants to “reinvent the wheel,” an LLM might offer a solution 
 - The solution lies is balance, and a focus on the “why”, not just the “what”.
 - I fear we’re losing our grip on this mastery. Not because engineers are becoming less and less intelligent, but because the pressure to deliver solutions quickly is paramount.
 - 글쓴이는 숙련도를 잃어가는 걸 두려워함. 엔지니어가 점점 멍청해져서가 아니라 솔루션을 신속하게 제공하라는 압력이 가장 중요하기 때문임.
+
+---
+
+[Going beyond singleton, scoped, and transient lifetimes—tenant, pooled, and drifter](https://andrewlock.net/going-beyond-singleton-scoped-and-transient-lifetimes/)
+
+- [Singleton, Scoped, Transient을 넘어서는 서비스 수명주기 - 테넌트, 풀링, 드리프터 - 👓 읽을 거리 - 닷넷데브](https://forum.dotnetdev.kr/t/singleton-scoped-transient/12939)
+
+- Singleton 서비스 : Singleton 서비스는 가장 단순한 수명주기로, 애플리케이션 전체에서 단 한 번만 생성되고 모든 요청에서 동일한 인스턴스가 사용됩니다
+- Scoped 서비스: Scoped 서비스는 하나의 요청(스코프) 내에서는 동일한 인스턴스가 사용되지만, 다른 요청에서는 새로운 인스턴스가 생성됩니다1. ASP.NET Core에서는 일반적으로 하나의 HTTP 요청이 하나의 스코프를 형성합니다.
+- Transient 서비스: Transient 서비스는 요청할 때마다 새로운 인스턴스가 생성됩니다1. 동일한 요청 내에서도 서비스를 여러 번 요청하면 매번 새로운 인스턴스가 제공됩니다.
+
+The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 가지 추가적인 서비스 수명주기 개념이 논의됨
+
+- Tenant-scoped 서비스 : 테넌트 스코프 서비스는 멀티테넌트 애플리케이션에서 특히 유용한 개념으로, 각 테넌트별로 “싱글톤” 인스턴스를 제공합니다1. 즉, 전체 애플리케이션에서 공유되는 것이 아니라 특정 테넌트에 대해서만 싱글톤으로 동작합니다.
+- Pooled 서비스 : 풀링된 서비스는 성능 향상을 위해 서비스 인스턴스의 풀을 관리하는 개념입니다1. Entity Framework Core의 DbContext 풀링 기능에서 영감을 받았으며, 할당(allocation)을 줄여 성능을 개선할 수 있습니다.
+- Time-based(drifter) 서비스: 시간 기반 서비스는 일정 시간 동안만 같은 인스턴스를 사용하고, 시간이 지나면 새로운 인스턴스를 생성하는 개념입니다1. 특정 시간 동안은 scoped 서비스처럼 동작하지만, 시간이 초과되면 새 인스턴스가 생성됩니다.
+
+![image_2025-04-28-15-17-43](img/image_2025-04-28-15-17-43.png)
