--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2023,6 +2023,17 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
 
 ![image_2025-04-28-15-17-43](img/image_2025-04-28-15-17-43.png)
 
+---
+
+- **Cold Start 콜드 스타트**
+
+- 구글 제미니가 설명해줌
+
+    콜드 스타트(Cold Start) 문제는 다양한 분야에서 발생할 수 있는 현상으로, 새로운 시스템, 서비스, 제품, 또는 사용자가 충분한 데이터나 상호작용 기록이 없어 제대로 작동하거나 개인화된 경험을 제공하기 어려운 초기 상태를 의미합니다. 마치 차가운 엔진을 처음 시동 걸 때 어려움을 겪는 것에 비유할 수 있습니다.
+
+- 추천 시스템, 소셜 네트워크, 머신러닝 등등에서 자주 사용되는 용어
+- 좀 더 요약하면, '예열하지 않고 시작하는 상황'
+
 ## 25.04.29
 
 [The Power of 10: Rules for Developing Safety-Critical Code](https://en.wikipedia.org/wiki/The_Power_of_10:_Rules_for_Developing_Safety-Critical_Code)
@@ -2044,3 +2055,4 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
 8. Use the preprocessor only for header files and simple macros.
 9. Limit pointer use to a single dereference, and do not use function pointers.
 10. Compile with all possible warnings active; all warnings should then be addressed before release of the software.
+
