--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2022,3 +2022,25 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
 - Time-based(drifter) 서비스: 시간 기반 서비스는 일정 시간 동안만 같은 인스턴스를 사용하고, 시간이 지나면 새로운 인스턴스를 생성하는 개념입니다1. 특정 시간 동안은 scoped 서비스처럼 동작하지만, 시간이 초과되면 새 인스턴스가 생성됩니다.
 
 ![image_2025-04-28-15-17-43](img/image_2025-04-28-15-17-43.png)
+
+## 25.04.29
+
+[The Power of 10: Rules for Developing Safety-Critical Code](https://en.wikipedia.org/wiki/The_Power_of_10:_Rules_for_Developing_Safety-Critical_Code)
+
+    The Power of 10 Rules were created in 2006 by Gerard J. Holzmann of the NASA/JPL Laboratory for Reliable Software.[1] The rules are intended to eliminate certain C coding practices that make code difficult to review or statically analyze. These rules are a complement to the MISRA C guidelines and have been incorporated into the greater set of JPL coding standards.[2]
+
+- 나사에서 c++ 코드 돌다가 무한루프 빠진다고 상상해보자. 우주선이 박살날 테고 손해액은 천문학적인 수준일 것이기 때문에... 굉장히 엄격한 코딩 안전성을 요구했다.
+- 그렇다고 전부 따라하면 안 되고, 현대 코딩 트렌드에 맞게 취사 선택해야 한다.
+  - 2번의 무한루프를 방지하는 규칙과, 6번의 데이터의 생명주기를 최대한 타이트하게 유지하는 규칙, 10번 treat warning as error 규칙은 많은 프로젝트에서도 공감할 것
+  - 하지만 3번 초기화 이후 힙 할당을 피하는 규칙과, 8번 전처리기에 관한 사항은 쉽게 동의를 얻진 못할 것이다.
+
+1. Avoid complex flow constructs, such as goto and recursion.
+2. All loops must have fixed bounds. This prevents runaway code.
+3. Avoid heap memory allocation after initialization.
+4. Restrict functions to a single printed page.
+5. Use a minimum of two runtime assertions per function.
+6. Restrict the scope of data to the smallest possible.
+7. Check the return value of all non-void functions, or cast to void to indicate the return value is useless.
+8. Use the preprocessor only for header files and simple macros.
+9. Limit pointer use to a single dereference, and do not use function pointers.
+10. Compile with all possible warnings active; all warnings should then be addressed before release of the software.
