--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2061,5 +2061,43 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
 9. Limit pointer use to a single dereference, and do not use function pointers.
 10. Compile with all possible warnings active; all warnings should then be addressed before release of the software.
 
+## 25.05.08
 
+[(889) SKT 유심해킹사건 모두 잘못 알고 계십니다(ft.최경진교수) - YouTube](https://www.youtube.com/watch?v=okPdYzTvOk8)
 
+- 이번 skt 사태 이후로 알아보는 보안 절차
+
+1. FDS(Fraud Detection System, 부정 거래 탐지 시스템) : 중국 등에서 거래가 발생할 때, 우리에게 본인이 맞냐고 확인 알람이 오는 서비스가 바로 이것.
+  - 머신 러닝 알고리즘으로 의심스럽다고 판단되는 사용자 요청 (금융 거래, 온라인 상품 구매 등) 이 있다면 비정상적인 활동 차단 알림을 보내는 것.
+2. 유심정보 보호 서비스  : '유심 일련번호(IMSI)' + '단말기 번호(IMEI)' 2개의 정보가 인증과정에서 요구되는 것. 즉 자물쇠가 2개가 있다고 생각하면 되고 암호 2개를 동시에 알아야 인증 절차를 통과할 수 있다.
+3. MFA(Multi-Factor Authentication, 다중 요소 인증) : 사용자가 계정에 로그인할 때 두 가지 이상의 서로 다른 인증 요소를 요구.
+  - 일반적인 비밀번호 외에 추가적인 증거를 제시해야 접근이 허용. (2차 비밀번호, 생체 인증, One Time Password/OTP 등)
+
+- skt 서버 HSS 해킹 이후로 정확히 어떤 개인정보가 유출되었는지는 skt 공식 발표 이전에 알기 어렵다.
+- 그렇지만 금융 탈취 등은 생각보다 그렇게 쉽게 발생하기가 어렵다. FDS / MFA 등 이미 여러 단계에 보안 절차가 있기 때문이다.
+- skt 에서 해킹 사건 이후 문자 메세지로 알리지 않았는데, 이걸로 비난하는 사람들이 있지만 어느 정도는 skt 입장이 납득은 간다. 이를 노리고 다른 보이스피싱 조직들이 스미싱 문자를 보내기 시작하면 또 피해자가 나타날 것.
+
+**제미니랑 문답**
+
+- IMSI (International Mobile Subscriber Identity, 국제 모바일 가입자 식별 번호)
+  - IMSI는 이동통신망에서 각 가입자를 고유하게 식별하는 번호입니다.
+  - SIM 카드나 eSIM 프로필 내에 저장되어 있으며, 휴대폰이 네트워크에 접속할 때 전송되어 가입자를 인증하고 로밍 서비스 등을 처리하는 데 사용됩니다.
+  - IMSI는 **국가 코드(MCC), 통신사 코드(MNC), 가입자 식별 번호(MSIN)**로 구성됩니다.
+
+- IMEI (International Mobile Equipment Identity, 국제 모바일 기기 식별 번호)
+  - IMEI는 휴대폰 단말기 자체를 고유하게 식별하는 15자리 숫자입니다.
+  - SIM 카드와는 달리 단말기 고유의 식별자이며, 분실 또는 도난 시 단말기를 추적하거나 사용을 막는 데 활용될 수 있습니다.
+  - IMEI는 일반적으로 휴대폰 설정 메뉴, *#06# 다이얼, 또는 제품 포장 상자 등에서 확인할 수 있습니다.
+  - 단말기 자급제와 같이 특정 통신사에 종속되지 않고 자유롭게 사용할 수 있는 단말기를 식별하는 데 중요한 역할을 합니다.
+
+---
+
+[GitHub - gwillguesBPFDoor BPFDoor Source Code. Originally found from Chinese Threat Actor Red Menshen](https://github.com/gwillgues/BPFDoor)
+
+1. BPF (Berkeley Packet Filter) 는 리눅스 커널 레이어에서 제공하는 기능
+2. 모종의 경로로 심어진 악성코드는 SKT 의 HSS 에서 BPF 에 '특정 규칙을 검사하는' 필터를 몰래 심어놓음
+  (매직 패킷 magic packet 을 찾는 필터)
+3. SKT 쯤 되면 서버 통신량이 테라 bit 는 우습게 넘어설 것이기 때문에, 실시간으로 모든 패킷을 검사하기란 현실적으로 힘들 것
+  이 부분을 악용해서 장기간에 걸쳐 점진적으로 매직 패킷을 전송
+4. HSS 측의 악성코드는 매직 패킷 확인 시, 패킷 정보를 조합해서 공격자와 통신
+  (서버 보안에서, 인바운드 통신을 엄격하게 검사하지만 아웃바운드 통신은 널널하게 허용해주는 점 악용)
