--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2101,3 +2101,28 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
   이 부분을 악용해서 장기간에 걸쳐 점진적으로 매직 패킷을 전송
 4. HSS 측의 악성코드는 매직 패킷 확인 시, 패킷 정보를 조합해서 공격자와 통신
   (서버 보안에서, 인바운드 통신을 엄격하게 검사하지만 아웃바운드 통신은 널널하게 허용해주는 점 악용)
+
+## 25.05.15
+
+[엔지니어링의 인간적 측면 마스터하기 Apple, Palantir, Slack에서 배운 리  GeekNews](https://news.hada.io/topic?id=20707)
+
+- [Mastering the Human Side of Engineering Lessons from Apple, Palantir and Slack](https://review.firstround.com/engineering-lessons-apple-palantir-slack/)
+
+> Apple의 엔지니어링 리더 Michael Lopp은 제품을 빠르게 만들 수 있는 시대일수록 사람 중심의 운영과 판단력이 중요하다고 강조
+
+- wolf time(늑대의 시간) 라는 표현을 사용 : 늑대처럼 코를 킁킁거리면서 또 다른 '창의적 발상'을 탐색하는 시간
+
+    I call it wolf time. Sniff around and see what you want to do next and explore. My engineering utopia is a world where 71% of time is spent on the ‘real’ business tasks and the other 29% is time to be a free electron and just create.
+
+- 상자(box) 와 수프(soup)
+
+    마이크로매니지먼트에 강한 거부감을 표함: "엔지니어에게 지시하는 것만큼 짜증나는 일은 없다"
+    대신, 리더는 "상자(Box)와 수프(Soup)" 을 제공해야 함
+        상자: 아이디어와 맥락을 채워 넣은 공간
+        국물: 구성원이 자유롭게 마시거나 조합할 수 있는 정보의 기반
+    지시 대신 영감을 주는 이야기를 제공하면, 구성원이 스스로 판단하고 성장함
+    일부 구성원은 “그냥 뭘 해야 하는지 말해줘요”라고 말하지만, 그조차도 결국 자기 방식대로 해석함
+
+    리더의 역할은 수프를 주는 것. 마실지, 뭘 넣을지는 그들의 선택이다.
+
+    “Instead of giving people a list, good leaders offer them a box and fill it with interesting ideas,” says Lopp. “It allows the folks you’re leading to go and put themselves in that box and see what they want to do with it. Whether you influence them or not doesn’t really matter. Your goal is to get your people thinking and give them as much information as possible.”
