--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2156,3 +2156,26 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
     복잡한 삶을 피하기 위해 새로운 앱이나 리팩터링을 시도하며 자기 위안을 얻음
 
 - 결국은 내려놓을 줄 알아야 한다. 의식적으로 책임을 지지 않는 것도 통제력의 한 종류임
+
+[빅테크 회사에서 '일을 끝냈다(Done)'는 것의 진짜 의미  GeekNews](https://news.hada.io/topic?id=20798)
+
+- [Getting things done in large tech companies  sean goedecke](https://www.seangoedecke.com/getting-things-done/)
+
+    빅테크에서 진짜로 일을 끝낸다는 것은 무한히 개선 가능한 시스템 속에서 회사가 만족하는 상태까지 마무리 짓고, 떠나는 것을 의미함
+    유능하지만 주도성이 부족한 엔지니어는 계속해서 사소한 개선만 반복하며 진짜 성과를 놓치게 됨
+    의사결정자에게 눈에 띄는, 명확한 결과물을 전달해야 "일을 한 것"으로 인정받을 수 있음
+    자신이 하는 일이 상위 관리자에게 읽히고 평가될 수 있는 형태인지 항상 점검해야 함
+    모든 일을 정리할 수는 없으며, 일정 시점에선 "승리를 선언하고 떠나는 능력"이 핵심 역량이 됨
+
+- 일이란 것은 완결될 수 없다.
+
+    수학 문제나 과제와 달리, 현실 세계의 일은 무한히 개선이 가능한 열린 시스템임
+    서비스 개발은 나무를 심는 일처럼, 이후에도 계속 관리가 필요한 과정임
+
+- 중요한 것은 일의 ‘가독성’ 확보
+
+    관리자가 이미 알고 있거나 요청한 프로젝트, 큰 사고 관련 대응은 가독성이 높음
+    기본적으로 대부분의 기술 작업은 관리자에게는 판단하기 어려운 기술적 잡음에 불과함
+    따라서, 성과를 눈에 보이는 형태로 만들거나 금전적 효과를 강조하는 등, 읽히도록 조율해야 함
+
+
