--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2178,4 +2178,23 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
     기본적으로 대부분의 기술 작업은 관리자에게는 판단하기 어려운 기술적 잡음에 불과함
     따라서, 성과를 눈에 보이는 형태로 만들거나 금전적 효과를 강조하는 등, 읽히도록 조율해야 함
 
+---
 
+[(933) 재앙급 취약점. 업데이트 안했다면, 제발 해주세요. 다른 사람들을 위해서..! Airborne 취약점 (유심보다 급함) - YouTube](https://www.youtube.com/watch?v=zNBNvdaKeKY)
+
+- [SOC Advisory – Apple AirPlay Zero-Click RCE Vulnerability (AirBorne) – 29 April 2025 - Secure-ISS %](https://secure-iss.com/soc-advisory-apple-airplay-zero-click-rce-vulnerability-airborne-29-april-2025/)
+
+- apple 긴급 보안 이슈, zero-click 취약점이라 큰 일이라고
+  - Apple AirPlay Zero-Clieck RCE Vulnerability (AirBorne)
+
+- CVE-2025-24252 + CVE-2025-24206 (Use-After-Free & Auth Bypass)
+  - Severity: Critical
+  - A use-after-free in AirPlay receiver plus an authentication bypass enables zero-click RCE on devices set to “Anyone on the same network” [1][4].
+
+- CVE-2025-24132 (Stack-Based Buffer Overflow)
+  - Severity: Critical
+  - An overflow in the AirPlay SDK affecting speakers, TVs and CarPlay systems allows wormable exploits [1][4].
+
+- CVE-2025-24271 (ACL Bypass)
+  - Severity: Critical
+  - Improper access-control handling lets attackers send unauthenticated AirPlay commands, weaponisable for RCE [1][4].
