--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2198,3 +2198,109 @@ The Breakpoint Show 팟캐스트에서 표준 수명주기를 넘어서는, 세 
 - CVE-2025-24271 (ACL Bypass)
   - Severity: Critical
   - Improper access-control handling lets attackers send unauthenticated AirPlay commands, weaponisable for RCE [1][4].
+
+## 25.05.22
+
+[Apache Lucene - Welcome to Apache Lucene](https://lucene.apache.org/)
+
+- Lucene Segment
+- Java로 작성된 고성능, 풀-텍스트 검색 라이브러리. 주로 텍스트 기반 데이터에 대해 검색 인덱싱과 검색 기능을 제공하는 데 사용
+
+- **chatgpt 문답**
+
+- Lucene은 라이브러리입니다. 애플리케이션에 직접 통합해야 함.
+- Elasticsearch는 Lucene 기반으로 구축된 분산 검색 엔진입니다. REST API 제공 및 클러스터링, 확장성, 고가용성 기능 내장.
+- 문서를 색인화하여 검색을 빠르게 수행할 수 있도록 준비. 색인 과정은 텍스트를 토큰(token)으로 나누고, 이를 기반으로 역색인(inverted index)을 구성
+
+**Inverted Index(역방향 인덱스)**
+
+- 정방향 인덱스 (Forward Index)
+  - 문서 ➝ 단어 목록
+
+```json
+Doc1: ["hello", "world"]
+Doc2: ["lucene", "hello"]
+```
+
+- 역방향 인덱스 (Inverted Index)
+  - 단어 ➝ 문서 ID 목록
+
+```json
+"hello": [Doc1, Doc2]
+"world": [Doc1]
+"lucene": [Doc2]
+```
+
+[Discord가 수십억 개의 메시지를 색인화하는 방법](https://discord.com/blog/how-discord-indexes-billions-of-messages)
+
+### 큰 그림
+
+메시지 원본 데이터 저장:
+→ Cassandra 같은 DB (혹은 내부 메시지 저장 시스템) 사용
+
+검색용 색인 저장:
+→ Elasticsearch 사용 (이게 inverted index 구조를 가짐, Lucene 기반)
+
+Redis 사용 용도:
+→ 메시지 데이터를 저장하는 게 아님
+→ "어떤 Elasticsearch 인덱스가 변경되었는지(=dirty) 를 추적하는 메타데이터를 저장
+→ 즉, Redis는 **색인된 데이터의 상태(변경 여부, dirty 상태)**만 관리함.
+
+### Elastisearch 자동 리프레시 관련
+
+1. 문제 상황
+
+  * Elasticsearch는 기본적으로 **1초마다 자동으로 인덱스 리프레시(refresh)** 수행
+  * 하지만 Discord 서버는 가끔 **몇 시간씩 검색 요청이 없는 경우도 많아서** 매초 리프레시하는 게 비효율적이고 리소스 낭비
+  * 그래서 **애플리케이션(Discord 백엔드)에서 직접 언제 리프레시할지 제어하는 시스템을 만들자**는 수요가 생김
+
+2. Redis 기반 ‘Dirty Map’ 구현
+
+* Redis에 **“인덱스(샤드)와 길드(guild_id)의 dirty_flag를 저장하는 해시맵(HashMap) 을 준비**
+* 구조:
+  * key: `prefix + shard_key`
+  * value: `{ guild_id1: dirty_flag, guild_id2: dirty_flag, ... }`
+  * set 구조로 해도 됐을 것 같다고 저자도 언급함.
+
+3. 색인(인덱싱) 절차
+
+  1. 메시지 큐에서 N개의 메시지를 가져옴.
+  2. 메시지가 어느 길드(guild_id)에 속하는지 확인해서, 해당하는 샤드(색인 단위)로 라우팅.
+  3. Elasticsearch에 bulk insert(일괄 색인) 실행.
+  4. **Redis의 dirty map을 업데이트해서 해당 샤드와 guild\_id를 ‘더럽혔다’고 표시**함.
+
+   * 이 Redis 키는 1시간 뒤 만료(expire)되도록 설정 → 1시간이면 Elasticsearch가 자동 리프레시를 한 셈이 됨.
+   * Redis의 dirty map이 혹시 데이터 손실되더라도(예: Redis 재시작 등)
+   * **Elasticsearch 인덱스는 1시간마다 자동 리프레시를 하기 때문에 최대 1시간 내에 상태가 자동 복구됨**.
+
+4. 검색 절차
+
+1. 검색하려는 guild_id가 어느 샤드에 있는지 확인.
+2. 그 샤드와 guild_id 의 dirtyFlag 확인
+3. dirty 상태면 해당 샤드의 Elasticsearch 인덱스를 **명시적으로 refresh 수행**하고, 해당 샤드의 dirtyFlag 해제
+4. 그 후에 검색 쿼리를 실행하고 결과를 반환.
+
+### 부하 관련
+
+- 메세지 데이터가 너무 많이 싸여서 추가 노드 / 디스크 증설이 필요할 때가 올 것. 이를 판단하기 위한 지표에 대해 설명함
+- heap_free, disk_free, cpu_usage, io_wait
+  - 재밌는 부분은 부하가 많은 cluster 와 그렇지 않은 cluster의 차이점.
+  - 메모리 여유가 없을 때 JVM 은 GC 를 수행. 이때 힙 metric이 요동치는 모습이 보인다.
+  - 이외에도 GC 시간이 스파이크 튀게 됨.
+
+![discord_Indexing_UnhealthyCluster_Heap](img/discord_Indexing_UnhealthyCluster_Heap.png) 
+
+![discord_Indexing_HealthyCluster_Heap](img/discord_Indexing_HealthyCluster_Heap.png)
+
+### Elasticache, Elasticsearch 비교
+
+| 항목               | **ElastiCache**                      | **Elasticsearch (Amazon OpenSearch Service)**  |
+| ------------       | ---------------------------          | ---------------------------------------------  |
+| **기능**           | 인메모리 캐시 / 키-값 저장소         | 검색 및 로그 분석용 분산 검색엔진              |
+| **기반 기술**      | Redis 또는 Memcached                 | Elasticsearch / Lucene (OpenSearch로 발전)     |
+| **주요 사용 사례** | 빠른 캐싱, 세션 저장, 큐잉, 랭킹     | 로그 분석, 텍스트 검색, 모니터링 (e.g. Kibana) |
+| **데이터 구조**    | 단순 키-값 / 자료구조 (list, set 등) | 역색인(Inverted Index), 복잡한 JSON 문서       |
+| **저장 위치**      | 메모리 기반 (RAM) → 휘발성           | 디스크 기반 (persistent)                       |
+| **속도**           | 매우 빠름 (us \~ ms 단위)            | 빠르지만 ElastiCache보다는 느림 (ms \~ 수초)   |
+| **예시**           | 로그인 세션 캐싱, 실시간 순위 저장   | 로그 검색, 에러 추적, 텍스트 기반 검색         |
+
