--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2304,3 +2304,89 @@ Redis 사용 용도:
 | **속도**           | 매우 빠름 (us \~ ms 단위)            | 빠르지만 ElastiCache보다는 느림 (ms \~ 수초)   |
 | **예시**           | 로그인 세션 캐싱, 실시간 순위 저장   | 로그 검색, 에러 추적, 텍스트 기반 검색         |
 
+## 25.05.23
+
+[How Discord Indexes Trillions of Messages](https://discord.com/blog/how-discord-indexes-trillions-of-messages)
+
+### Redis 데이터 유실 이슈가 문제가 됨
+
+    Our Redis message indexing queue would drop messages
+    → 우리 Redis 기반 메시지 색인 큐는 메시지를 유실하는 문제가 발생했다.
+
+    We used Redis to back our realtime message indexing queue, which held up great at first.
+    → 우리는 실시간 메시지 색인을 위한 큐로 Redis를 사용했으며, 초기에는 잘 동작했다.
+
+    However, when our indexing queue got backed up for any reason,
+    → 하지만 무슨 이유로든 색인 큐가 밀리기 시작하면 (예: 병목 발생)
+
+    which happened often on Elasticsearch node failure,
+    → 이런 현상은 주로 Elasticsearch 노드 장애 시 자주 발생했다.
+
+    the Redis cluster became a source of failure that began dropping messages
+    → 그러면 Redis 클러스터 자체가 오히려 문제의 원인이 되어 메시지를 유실하기 시작했다.
+
+    once CPU maxed out with too many messages in the queue.
+    → 그 이유는 Redis에 큐에 쌓인 메시지가 너무 많아 CPU 사용률이 100%에 도달했기 때문이다.
+
+- Redis는 메모리 기반이라 큐가 무한정 커질 수 없음.
+- Redis는 보통 캐시나 상태 관리 용도로는 적합하지만, 대용량 큐 처리용으로는 RabbitMQ, Kafka 같은 전문 메시지 큐 시스템보다 내구성이나 안정성이 부족할 수 있음.
+
+    To put it into perspective, let's say our Elasticsearch cluster had 100 nodes, and we were indexing batches of 50 messages.
+    → 예를 들어 노드가 100개 있는 클러스터에 50개 메시지를 한 번에 색인한다고 치자.
+
+    If one node fails, assuming an equal distribution,
+    → 메시지들이 균등하게 분산된다고 가정했을 때, 노드 중 하나가 장애가 나면,
+
+    the odds of a given batch having at least one message going to that failed node are ~40%.
+    → **그 batch 안에 적어도 하나는 그 장애 노드로 가 있을 확률이 약 40%**라는 뜻이다.
+
+    This means that a single-node failure leads to ~40% of our bulk index operations failing!
+    → 즉, 노드 하나만 장애 나도 전체 bulk 작업의 40%가 실패하게 된다!
+
+- discord 의 메세지 bulk 처리 특징 상 하나의 bulk 작업이 여러 노드로 퍼지기 때문에, 한 노드만 장애 나도 전체 작업이 실패함
+
+- discord 의 guild 의 경우, 규모가 큰 길드에 특히 더 사람이 쏠리는 경향이 있음.
+  - Each of our Elasticsearch indices is a single Lucene index under the hood, and Lucene has a MAX_DOC limit of about 2 billion messages per index.
+  - Lucene 의 MAX_DOC 한계는 20억 인데, 이 한계치에 도달해버림. 딱 한번 리미트에 도달하더라도 모든 indexing 기능이 전부 실패해버렸다.
+
+### 디스코드 측 솔루션
+
+- Elasticsearch 를 Kubernetes 에 배포 (Elastic Kubernetes Operator)
+  - 클러스터 구성(topology) 과 설정(configuration) 을 쉽게 정의할 수 있고,
+  - Kubernetes 노드풀에 Elasticsearch 클러스터를 배포할 수 있다
+  - 노드의 OS 업데이트도 자동 수행 가능 + ECK Operator 는 롤링 재시작(Rolling Restart) 기능을 제공
+- 작은 Elasticsearch 클러스터를 구동할 때에 'cell' 아키텍쳐를 도입
+  - 기존에는 index 하나 당 cluster 200 개 <- 관리 비용이 너무 컸고 특히 마스터 노드의 부하가 커져서 Out Of Memory(OOM) 자주 발생.
+
+![discord_CellArchitecture_250523](img/discord_CellArchitecture_250523.png)
+  - Master-eligible nodes always have sufficient resources to perform cluster coordination
+  - Ingest nodes performing pre-processing and routing can be run as a stateless deployment since they own no data and can scale up and down to handle volume spikes
+  - Data nodes can be given sufficient heap resources to handle indexing and query operations
+
+- Redis 를 에서 Google Cloud 의 PubSub 서비스 indexing message queue 이전
+  - [PubSub for Application & Data Integration  Google Cloud](https://cloud.google.com/)
+
+
+| 항목                    | Redis                                              | PubSub                                               |
+| --------------------    | ------------------------------                     | ---------------------------------------              |
+| **기반**                | In-memory (RAM)                                    | Disk-backed (지속성 있음)                            |
+| **내구성 (Durability)** | 메시지를 메모리에 저장하므로 **장애 시 유실 위험** | 디스크에 저장되므로 **유실 방지**                    |
+| **스케일링**            | 처리 속도 빠르지만, **backlog에 취약**             | 자동 확장, **메시지 적체에 더 강함**                 |
+| **보장 수준**           | 메시지 유실 가능성 있음 (특히 CPU 과부하 시)       | **적어도 한 번(at-least-once) 보장**, 유실 거의 없음 |
+
+* Redis 도 디스크 저장 기능이 있다. 하지만 주기적으로 snapshot 을 백업하거나 (RDB/Redis Database Snapshot) 모든 명령 로그를 백업하는 방식이 있지만(AOF/append only file) 이러면 속도가 떨어져서 inmemory db 의 특징이 퇴색된달까?
+* PubSub 은 메세지 큐의 안전성 보장이 바탕이 되는 서비스다.
+
+| 항목            | Redis의 디스크 저장          | Pub/Sub의 디스크 저장                               |
+| ----------      | ---------------------        | -------------------------------                     |
+| **목적**        | 서버 재시작 시 복구          | 메시지 전달 보장                                    |
+| **동작 방식**   | 백그라운드에서 비동기 저장   | 메시지를 디스크 큐에 저장 후, 전달 성공 시까지 보관 |
+| **유실 가능성** | 설정에 따라 일부 유실 가능   | 보통 **at-least-once** 보장 (유실 없음)             |
+| **사용 대상**   | 전체 데이터 상태 (key-value) | 개별 메시지 단위 처리 (queue/stream)                |
+
+- 특정 Guild가 Lucene의 MAX_DOCS(21억 개) 한도에 근접하면 이를 "BFG(Big Freaking Guild)"로 간주
+  - 일반 쿼리 성능이 굉장히 느려지기 때문에 BFG 전용 인덱스를 분리 & 더 많은 primary shard 를 할당
+  - 샤드 별로 병렬 처리 수행
+
+- 재색인 (re-indexing) 과정에 대해서도 설명
+  - Lucene 한도에 다다르면, 해당 index를 `index-a`로 분류, 이후 샤드 갯수가 두 배인 index를 준비(bfg index) 하고 기존 데이터를 마이그레이션
