--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2662,4 +2662,51 @@ WHERE state = 'idle in transaction';
 | 💥 DDL 실패    | `ALTER TABLE` 같은 스키마 변경 쿼리가 대기 또는 실패 |
 | 🧠 리소스 낭비 | 연결 유지 비용 발생 (메모리, 커넥션 풀 등)           |
 
+## 25.06.09
+
+[pblyatMabinogiTools](https://github.com/pblyat/MabinogiTools)
+
+- 마비노기 모바일 딜 미터기
+  - 클라 -> 서버 패킷은 기본적으로 난독화를 하지만 서버 -> 클라 패킷은 난독화가 생략됨
+  - 여기서 파이썬으로 패킷 스니핑코드 작성
+    - 작성자는 인게임 허수아비 때려보면서 전투 데이터 패킷을 분석함
+  - 패킷 압축 알고리즘은 brotli 사용 중, ai 쓰면 이걸 파악하기 쉬웠을 것임
+  - 패킷 헤더에서 패킷 종류를 표기하는 값과, 데메지 타입, 데메지 수치 값을 알아냄
+
+위 과정을 ChatGPT 코드 도움을 받아서 작성
+
+- 아예 코드 주석에 달아놨더라.
+
+```py
+class DamageTrackerApp: #챗지피티 최고
+    def __init__(self, root):
+        global running
+        self.root = root
+        self.root.title("Redpill beta " + ver)
+        self.root.geometry("300x500")
+        self.root.resizable(False, False)
+
+        # 폰트
+        bold_font = font.Font(weight="bold", size=13)
+        big_bold_font = font.Font(weight="bold", size=16)
+```
+
+- 코드 작성자는 비인가 프로그램 사용 시의 법적 문제는 본인이 책임지지 않겠다고 README 달아둠.
+
+
+```
+코딩 뉴비가 만드는 어설픈 모비노기 툴
+
+해당 코드 사용으로 인해 발생하는 문제에 대해 전 책임을 지지 않습니다!! 이 코드들을 활용해 더 나은 툴들을 만드시는건 환영입니다!!
+
+이 코드로 인해 법적 문제가 발생한다면 제발 살려주세요
+```
+
+---
+
+[(1054) 딜 미터기 때문에 난리인데 데브캣은 왜 공지가 없나 마비노기 모바일 - YouTube](https://www.youtube.com/watch?v=bMTKARvmVCA)
+
+- [데미지 계산기 완성 - 마비노기 모바일 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=mabinogimobile&no=1222133&exception_mode=recommend&page=3)
+
+- 게시판은 불타는 중
 
