--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2709,4 +2709,6 @@ class DamageTrackerApp: #챗지피티 최고
 - [데미지 계산기 완성 - 마비노기 모바일 마이너 갤러리](https://gall.dcinside.com/mgallery/board/view/?id=mabinogimobile&no=1222133&exception_mode=recommend&page=3)
 
 - 게시판은 불타는 중
-
+  - 염색 쪽 비인가 프로그램은 왜 안막느냐
+  - 딜미터기로 결과를 보니 결국 레이드에서 트롤링 하는 유저들은 자동 사냥 누르고 손 놓고 있던 인간들 <- 얘네 때문에 열심히 하는 유저들 다 피해보고 있는거 어떻게 할 것이냐
+    - 너희들 오토 정책 때문에 열심히 하는 유저들 피해보고 있는데 데브캣 너네들이 손 봐야하지 않겠냐
