--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2712,3 +2712,80 @@ class DamageTrackerApp: #챗지피티 최고
   - 염색 쪽 비인가 프로그램은 왜 안막느냐
   - 딜미터기로 결과를 보니 결국 레이드에서 트롤링 하는 유저들은 자동 사냥 누르고 손 놓고 있던 인간들 <- 얘네 때문에 열심히 하는 유저들 다 피해보고 있는거 어떻게 할 것이냐
     - 너희들 오토 정책 때문에 열심히 하는 유저들 피해보고 있는데 데브캣 너네들이 손 봐야하지 않겠냐
+
+## 25.06.10
+
+### forward secrecy
+
+- [Forward secrecy](https://en.wikipedia.org/wiki/Forward_secrecy)
+- Gemini 문답
+
+포워드 시크릿(Forward Secrecy, FS), 또는 **완벽한 포워드 시크릿(Perfect Forward Secrecy, PFS)**
+
+- 핵심 아이디어는 장기적인 비밀 키(예: 서버의 개인 키)가 나중에 유출되더라도, 과거에 암호화된 통신 내용은 해독되지 않도록 보호하는 것
+- 세션키가 공격자에게 유출되더라도 피해를 최소화하는 것. 유출된 암호 키를 통해 공격자는 현재 세션 통신을 복호화 할 수 있겠지만 과거 세션, 미래 세션의 통신을 복호화할 수 없는 것.
+- 중간자 공격(MITM / Man in the Middle) 으로 공격자가 모든 트래픽을 스니핑 하고 있는 경우, 암호 키가 유출되는 것은 과거 모든 트래픽을 해독 시도할 수 있다는 것. 
+- Diffie-Hellman(DH) 또는 Elliptic Curve Diffie-Hellman(ECDH)와 같은 키 합의 알고리즘을 함께 사용하여 포워드 시크릿을 제공하는 것이 일반적.
+  - 매 통신 세션마다 과거의 공개 / 개인 키를 폐기하고 새로 생성하는 것
+  - RSA 키 쌍을 생성하는 과정은 계산 비용이 매우 높습니다. 특히, 암호학적으로 안전한 큰 소수 두 개(p와 q)를 찾아내야 하는데, 이는 상당한 시간이 소요됨. 
+    - 만약 많은 수의 유저 요청을 받는 서버라면 RSA 키 생성 비용이 부담이 될 수 있음.
+
+### Elliptic Curve Diffie-Hellman(ECDH)
+
+- [Elliptic-curve Diffie–Hellman](https://en.wikipedia.org/wiki/Elliptic-curve_Diffie%E2%80%93Hellman)
+
+- 키 합의 프로토콜(key agreement protocol)
+- 안전하지 않은 채널에서 공격자가 중간에 트래픽을 엿보고 있더라도 노출되지 않는 대칭 암호화 키를 함께 생성한다.
+
+
+1. 타원 곡선 (Elliptic Curve)의 이해 📈
+
+- ECDH는 특정한 타원 곡선 방정식을 기반으로 합니다.
+- 이 타원 곡선은 유한체(finite field) 상에서 정의되며, 곡선 위의 점들을 이용한 연산(덧셈, 스칼라 곱셈)이 핵심입니다.
+- 이러한 연산은 특정 방향으로는 계산이 쉽지만, 역방향으로 계산하는 것은 매우 어렵다는 **타원 곡선 이산 로그 문제(ECDLP)**의 난이도에 기반합니다. 이 난이도가 ECDH의 보안성을 제공합니다.
+
+2. 키 쌍 생성 🔑
+
+* **개인 키**: 무작위 정수.
+* **공개 키**: 타원 곡선 위의 기준점(Generator Point, $G$)에 개인 키를 스칼라 곱셈하여 얻은 점
+
+
+4. 공유 비밀 계산 🤫
+
+이제 앨리스와 밥은 각각 자신의 개인 키와 상대방의 공개 키를 사용하여 동일한 **공유 비밀 키**를 계산합니다.
+
+* 앨리스는 자신의 개인 키 $d_A$와 밥의 공개 키 $Q_B$를 사용하여 공유 비밀 $S$를 계산합니다: $S = d_A \cdot Q_B$.
+* 밥은 자신의 개인 키 $d_B$와 앨리스의 공개 키 $Q_A$를 사용하여 공유 비밀 $S'$를 계산합니다: $S' = d_B \cdot Q_A$.
+
+- $S = d_A \cdot Q_B = d_A \cdot (d_B \cdot G) = (d_A \cdot d_B) \cdot G$
+- $S' = d_B \cdot Q_A = d_B \cdot (d_A \cdot G) = (d_B \cdot d_A) \cdot G$
+  - 따라서 $S = S'$가 됩니다. 즉, 앨리스와 밥은 서로 다른 계산을 수행하지만, 결과적으로 동일한 공유 비밀을 얻게 됩니다.
+
+---
+
+Q. 개인 키(d) 값은 알아낼 수 있지만, brute-force 로 확인해봐야 한다는 것이군. 예컨대 1~100 범위라면 추측으로 1~50 은 건너뛰고 51~100 범위 안에 있을 것이다. 이렇게 먼저 추론할 수가 없다는 것임?
+
+네, 정확하게 이해하셨습니다! **d 값은 브루트 포스(Brute-Force) 외에는 효율적으로 알아낼 방법이 없고, 특정 범위를 추론하여 건너뛰는 것도 불가능합니다.**
+
+1. 왜 d 값을 추론하기 어려운가? 🕵️‍♀️
+
+이것이 바로 ECDLP(타원 곡선 이산 로그 문제)의 핵심 난이도입니다.
+
+1.  **완벽한 무작위성**: 개인키 $d$는 주어진 매우 넓은 범위(예: $1$부터 $2^{256}-1$까지) 내에서 **완전히 무작위로 선택된 정수**입니다. 여기에 어떠한 패턴이나 예측 가능한 특성도 없습니다. 마치 1부터 100까지의 숫자 중에서 눈 감고 무작위로 하나를 뽑았는데, 그 숫자가 51~100 사이에 있을 거라고 추측하는 것과 같습니다. 이는 단순한 도박일 뿐, 어떤 수학적 근거도 없습니다.
+2.  **연산의 비선형성**: ECDH에서 사용되는 타원 곡선 스칼라 곱셈 ($Q = d \cdot G$)은 선형적인 관계가 아닙니다. 일반적인 곱셈처럼 $d$ 값이 커지면 $Q$도 비례해서 커지는 것이 아닙니다. 타원 곡선 위에서 점들이 "뒤죽박죽" 덧셈되면서 움직이는 특성 때문에, $d$ 값이 조금만 달라져도 결과 점 $Q$는 완전히 다른 위치로 이동합니다.
+    * **예시**: 만약 $d$가 50일 때 $Q_1$이라는 점이 나오고, $d$가 51일 때 $Q_2$라는 점이 나온다고 가정해 봅시다. $Q_1$과 $Q_2$ 사이에는 어떤 예측 가능한 기하학적 관계도 없습니다. $Q_1$을 알더라도 $Q_2$를 유추할 수 없습니다.
+3.  **이산성**: 타원 곡선 위의 점들은 연속적이지 않고 "이산적"입니다. 즉, 점들 사이에 빈 공간이 많습니다. 이 때문에 $Q$를 알고 있다고 해서 $d$를 "추론"하는 것이 불가능합니다. $Q$는 $d \cdot G$의 결과로 나오는 유일한 점이지만, $d$가 무엇인지 알려주는 단서는 전혀 제공하지 않습니다.
+
+---
+
+2. 추론 불가능의 의미 🔐
+
+당신이 말씀하신 "1~50은 건너뛰고 51~100 범위 안에 있을 것이다"와 같은 추론은 일반적인 선형 방정식이나 연속적인 그래프에서는 가능할 수 있습니다.
+
+예를 들어 $y=2x$라는 함수에서 $y$가 100이라면 $x$는 50일 것이고, $y$가 90이라면 $x$는 45일 것이라고 추론할 수 있죠.
+
+하지만 타원 곡선 이산 로그 문제에서는 이런 추론이 통하지 않습니다. 공격자는 공개키 $Q_A$를 보면서 어떤 개인키 $d_A$가 $Q_A$를 생성했는지 전혀 알 수 없습니다. 마치 "끝점만 보고 미로의 시작점을 찾아라"는 것과 같으며, 이 미로에는 지름길이나 패턴이 전혀 없어 모든 길을 다 들어가 봐야 하는 상황과 유사합니다.
+
+그래서 현재까지는 $d$ 값을 찾기 위한 가장 효율적인 공격 방법이 여전히 **브루트 포스 검색** (또는 생일 공격과 같은 약간 더 효율적인 변형)인데, 이는 개인키의 크기가 충분히 크다면 현실적으로 불가능한 시간과 컴퓨팅 자원을 요구합니다.
+
+이것이 바로 ECDH를 포함한 타원 곡선 암호 시스템이 안전하다고 간주되는 핵심적인 이유입니다.
