--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2789,3 +2789,16 @@ Q. 개인 키(d) 값은 알아낼 수 있지만, brute-force 로 확인해봐야
 그래서 현재까지는 $d$ 값을 찾기 위한 가장 효율적인 공격 방법이 여전히 **브루트 포스 검색** (또는 생일 공격과 같은 약간 더 효율적인 변형)인데, 이는 개인키의 크기가 충분히 크다면 현실적으로 불가능한 시간과 컴퓨팅 자원을 요구합니다.
 
 이것이 바로 ECDH를 포함한 타원 곡선 암호 시스템이 안전하다고 간주되는 핵심적인 이유입니다.
+
+---
+
+    Q. RSA 도 ECDH 처럼 매 통신 세션 마다 개인 키 / 공개 키를 생성 / 폐기 하는 것은 가능하다는 것으로 이해. 하지만 RSA 의 키 생성 비용은 비싸기 때문에 (높은 보안성을 위해 암호화 키의 바이트 길이가 길어서 (2048bit)) 대규모 서비스 환경이라면 매번 RSA 키를 준비하는 것은 큰 부하가 될 것
+
+    만약 공격자가 개인키 탈취에 성공한 경우 ,RSA / ECDH 에 상관없이 통신 트래픽이 유출되는 것은 동일 . 하지만 차이점은 ECDH 가 매 세션 마다 새로운 공개 / 개인 키를 생성 폐기 함으로써 forward secrecy 를 달성하는 것
+
+    이렇게 이해함
+
+Gemini 가 맞다고 해줌
+
+- RSA: RSA 키 생성은 매우 계산 비용이 높습니다. 이는 높은 보안 강도(예: 2048비트 이상)를 위해 암호학적으로 안전한 큰 소수를 찾는 과정이 매우 복잡하고 시간이 오래 걸리기 때문입니다. 따라서 대규모 서비스 환경에서 매번 RSA 키 쌍을 생성하는 것은 서버에 엄청난 부하를 주어 성능 저하로 이어집니다.
+- ECDH: ECDH 키 생성은 RSA에 비해 훨씬 효율적입니다. 이는 짧은 키 길이(예: 256비트)로도 동등한 보안 강도를 제공하며, 타원 곡선 위의 점 스칼라 곱셈 연산이 RSA의 소수 찾기나 모듈러 지수화에 비해 빠르기 때문입니다.
