--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2802,3 +2802,18 @@ Gemini 가 맞다고 해줌
 
 - RSA: RSA 키 생성은 매우 계산 비용이 높습니다. 이는 높은 보안 강도(예: 2048비트 이상)를 위해 암호학적으로 안전한 큰 소수를 찾는 과정이 매우 복잡하고 시간이 오래 걸리기 때문입니다. 따라서 대규모 서비스 환경에서 매번 RSA 키 쌍을 생성하는 것은 서버에 엄청난 부하를 주어 성능 저하로 이어집니다.
 - ECDH: ECDH 키 생성은 RSA에 비해 훨씬 효율적입니다. 이는 짧은 키 길이(예: 256비트)로도 동등한 보안 강도를 제공하며, 타원 곡선 위의 점 스칼라 곱셈 연산이 RSA의 소수 찾기나 모듈러 지수화에 비해 빠르기 때문입니다.
+
+## 25.06.12
+
+### Regex 정규식 엔진 내부
+
+1. **파서(Parser)** : 정규식 엔진은 먼저 입력된 정규식을 분석하여 **추상 구문 트리(AST)** 또는 **상태 기계(State Machine)** 형태로 변환. 이 과정에서 패턴을 최적화하고, 불필요한 연산을 제거하여 성능을 개선합니다.
+2. **상태 기계(State Machine)**
+  - 정규식 엔진은 일반적으로 **NFA(비결정적 유한 상태 기계)** 또는 **DFA(결정적 유한 상태 기계)** 방식으로 동작합니다.
+    - **NFA(Non-deterministic Finite Automaton)**: 백트래킹을 활용하여 여러 경로를 탐색하며 매칭을 수행합니다. C#의 기본 정규식 엔진이 이 방식을 사용합니다. 백트랙킹 때문에 최약의 경우 지수적인 시간 복잡도를 가질 수 있어 성능 예측이 어려움
+    - **DFA(Deterministic Finite Automaton)**: 각 문자에 대해 명확한 상태 이동을 정의하며, 더 빠른 성능을 제공하지만 메모리를 많이 사용할 수 있습니다. 백트랙킹이 없고 항상 선형 시간복잡도 O(N)
+
+- 백트랙킹 알고리즘을 위해 상태머신으로 컴파일하지만, 필요하다면 사전 컴파일이 가능하다.
+- C#의 정규식 엔진은 필요할 경우 `RegexOptions.Compiled` 옵션을 사용하여 성능을 최적화할 수 있습니다.
+
+
