--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2816,4 +2816,47 @@ Gemini 가 맞다고 해줌
 - 백트랙킹 알고리즘을 위해 상태머신으로 컴파일하지만, 필요하다면 사전 컴파일이 가능하다.
 - C#의 정규식 엔진은 필요할 경우 `RegexOptions.Compiled` 옵션을 사용하여 성능을 최적화할 수 있습니다.
 
+---
 
+### 은행원 반올림
+
+은행원 반올림(Banker's Rounding)은 가장 가까운 짝수로 반올림하는 방식. 일반적으로 우리가 배우는 '사사오입(捨四捨五入)'과는 달리, 0.5로 끝나는 경우에만 특별한 규칙이 적용
+
+| 규칙                   | 은행원 반올림 (Banker's Rounding)                      | 일반적인 반올림 (사사오입)                        |
+| :--------------------- | :---------------------------------------------         | :------------------------------------------------ |
+| **0.5 미만**           | 버림 (예: 2.3 -> 2)                                    | 버림 (예: 2.3 -> 2)                               |
+| **0.5 초과**           | 올림 (예: 2.6 -> 3)                                    | 올림 (예: 2.6 -> 3)                               |
+| **정확히 0.5인 경우**  | **가장 가까운 짝수로 반올림** (예: 2.5 -> 2, 3.5 -> 4) | **무조건 올림** (예: 2.5 -> 3, 3.5 -> 4)          |
+
+### 은행원 반올림을 사용하는 이유
+
+**원본 숫자:**
+
+* 2.5 , 3.5 , 4.5 , 5.5 , 6.5
+* 총합: 2.5 + 3.5 + 4.5 + 5.5 + 6.5 = 22.5
+
+- 사사오입 반올림
+
+* 2.5 -> 3
+* 3.5 -> 4
+* 4.5 -> 5
+* 5.5 -> 6
+* 6.5 -> 7
+
+* **반올림 후 합계:** 3 + 4 + 5 + 6 + 7 = 25
+* **오차:** 25 - 22.5 = +2.5
+
+- 은행원 반올림
+
+* 2.5 -> 2 (2는 짝수이므로 버림)
+* 3.5 -> 4 (3은 홀수이므로 올림)
+* 4.5 -> 4 (4는 짝수이므로 버림)
+* 5.5 -> 6 (5는 홀수이므로 올림)
+* 6.5 -> 6 (6은 짝수이므로 버림)
+
+* **반올림 후 합계:** 2 + 4 + 4 + 6 + 6 = 22
+* **오차:** 22 - 22.5 = -0.5
+
+- 사사오입 반올림은 0.5인 경우 항상 올림하여 **누적 오차가 한 방향(상향)으로 편향**될 가능성이 높습니다.
+  - 누적 데이터가 많으면 오차는 더욱 커질 수 있음
+- 반면, 은행원 반올림은 0.5인 경우 올림과 버림을 번갈아 나타나면서 서로 오차를 상쇄 ->  **누적 오차를 최소화하고 통계적 편향을 줄이는 데 효과적**
