--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2860,3 +2860,35 @@ Gemini 가 맞다고 해줌
 - 사사오입 반올림은 0.5인 경우 항상 올림하여 **누적 오차가 한 방향(상향)으로 편향**될 가능성이 높습니다.
   - 누적 데이터가 많으면 오차는 더욱 커질 수 있음
 - 반면, 은행원 반올림은 0.5인 경우 올림과 버림을 번갈아 나타나면서 서로 오차를 상쇄 ->  **누적 오차를 최소화하고 통계적 편향을 줄이는 데 효과적**
+
+---
+
+[.NET Runtime config options - .NET  Microsoft Learn](https://learn.microsoft.com/en-us/dotnet/core/runtime-config/)
+
+.NET 의 runtime 설정은 아래 방법으로 설정 가능
+
+- **runtimeconfig.json** : 단일 애플리케이션 실행 시 참조되는 JSON 구성 파일로, 런타임 옵션과 여러 시스템 동작 설정을 포함
+
+```json
+{
+  "runtimeOptions": {
+    "tfm": "net8.0",
+    "framework": {
+      "name": "Microsoft.NETCore.App",
+      "version": "8.0.0"
+    },
+    "configProperties": {
+      "System.Globalization.UseNls": true,
+      "System.Net.DisableIPv6": true,
+      "System.GC.Concurrent": false,
+      "System.Threading.ThreadPool.MinThreads": 4,
+      "System.Threading.ThreadPool.MaxThreads": 25
+    }
+  }
+}
+```
+- **MSBuildProperties** : 프로젝트 파일(예: .csproj) 내에서 MSBuild 속성으로 런타임 동작을 미리 구성
+- **Environment variables** : 실행 환경에서 환경 변수를 설정함으로써 런타임의 기본 동작을 덮어쓸 수 있습니다. (테스트 인프라에서 기존 설정을 쉽게 덮어쓴다.)
+
+- MSBuildProperties -> runtimeconfig.json -> Environment variable 순으로 우선순위가 높다.
+  - 다시 말해 MSBuildProperties 위에 runtimeconfig.json 값을 덮어씌우고, 그 다음으로 환경변수 설정을 덮어씌운다.
