--- a/Document_2025/C_2025.md
+++ b/Document_2025/C_2025.md
@@ -2892,3 +2892,46 @@ Gemini 가 맞다고 해줌
 
 - MSBuildProperties -> runtimeconfig.json -> Environment variable 순으로 우선순위가 높다.
   - 다시 말해 MSBuildProperties 위에 runtimeconfig.json 값을 덮어씌우고, 그 다음으로 환경변수 설정을 덮어씌운다.
+
+## 25.06.13
+
+### 원자성(Atomicity) 결여, 분산 트랜잭션 문제(Distributed Trasaction)
+
+게임 내 인벤토리 시스템을 구현하면서 다음과 같은 버그가 발생했습니다:
+
+    고정된 크기의 배열 [a, b, c] 형태로 아이템 데이터를 저장하며, 각 슬롯은 기본값이 null입니다.
+    아이템은 순차적으로 넣고 빼야 하며(a → b → c, 제거는 c → b → a), 기존 값을 갱신하는 것은 허용되지 않습니다. 단지 넣었다가 빼는 구조입니다.
+    서버에서는 이 배열을 세 번의 갱신 요청으로 처리하는데, 각 요청에서 [a, null, null], [a, b, null], [a, b, c]의 상태로 데이터를 갱신하게 됩니다.
+
+문제가 발생한 케이스는 다음과 같습니다:
+
+- 기존 배열이 [a, b, c] 상태였고, 이를 전부 제거한 후 [a2, b2, c2]로 교체하려는 작업을 수행.
+
+1. [a, b, c] -> [a, b, null] -> [a, null, null] -> [null, null, null] 까지는 정상 진행
+2. [a2, null, null] 갱신 성공 → a2 인벤토리에서 제거
+3. [a2, b2, null] 갱신 실패 → b2 제거 시도 후 실패 확인 → 복구
+4. [a2, b2, c2] 갱신 성공 → c2 인벤토리에서 제거
+
+- 결과적으로 데이터 상으론 [a2, b2, c2]가 저장되었으나, 인벤토리에서는 b2가 복구되고 a2와 c2만 제거되어 실제 인벤토리 상태와 저장된 데이터가 불일치하는 문제가 발생
+
+---
+
+- **Gemini 문답**
+
+· 이 케이스는 결국 “원자성(atomicity)이 깨진 분산 트랜잭션” 문제라고 볼 수 있어요. 흔히 다음과 같은 이름들로 부릅니다.
+· 단일 DB가 아니라, DB와 게임 서버의 메모리(또는 다른 저장소)를 동시에 갱신할 때 생기는 고전적인 문제예요.  
+· 해결책으로 2PC(Two-Phase Commit), XA 트랜잭션 같은 무거운 기법이 있지만, 게임처럼 응답성이 중요한 곳에선 잘 쓰이지 않죠.
+
+1. Saga 패턴  
+· “로컬 트랜잭션의 연쇄 + 실패 시 보상 트랜잭션(compensating transaction)”으로 전체 절차를 관리하는 방식
+· a2 삽입 성공 → b2 삽입 시 실패 → a2 제거(보상) → 이후 전체 성공 시 c2 삽입  
+· 이런 식으로 “실패 시 단계별로 롤백”을 명시적으로 구현하는 패턴이죠.
+· 금융권의 돈 이체 – 보내는 계좌에서 출금, 받는 계좌에 입금 두 단계를 2PC로 묶다가 결국 성능/운영 복잡도로 분산 Saga를 채택한 곳이 많습니다.
+
+2. TCC(Try-Confirm-Cancel)  
+· 각 단계를 먼저 예약(try), 실제 반영(confirm), 실패 시 취소(cancel)하는 구조예요.  
+· Saga처럼 가벼운 편이지만, 각 리소스가 TCC 인터페이스를 지원해야 한다는 전제가 필요합니다.
+
+3. Outbox 패턴 & 이벤트 소싱  
+· DB 업데이트와 외부 시스템 호출 간에 “같은 DB 커밋 안에서 메시지(outbox 테이블)에 기록 → 뒤에서 메시지 브로커로 전달”하는 방식  
+· 결국 “트랜잭션 경계는 DB 한 곳으로 모으고, 외부 시스템은 메시지 처리기로 비동기 분리”하는 접근입니다.
